[package]
name    = "avefuzz"
version = "2.0.0"
edition = "2021"
description = "AveBrowser — fast async HTTP fuzzer for bug hunters"

[[bin]]
name = "avefuzz"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"], default-features = false }
clap        = { version = "4", features = ["derive", "color", "env"] }
indicatif   = "0.17"
colored     = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
regex       = "1"
tokio-util  = { version = "0.7", features = ["full"] }
anyhow      = "1"
chrono      = "0.4"
